# SYNCRO

./: .gitignore  CurrentState.md  ONBOARDING_TOUR_SUMMARY.md  README.md
.github/workflows/: ci.yml  database.yml  e2e.yml  lint.yml  migration-drift-check.yml  rls-audit.yml  security-audit.yml  staging-deploy.yml  test.yml  typecheck.yml
backend/: .env.example  .eslintrc.cjs  PII_REDACTION_README.md  index.js  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
backend/scripts/: 018_add_trial_tracking.sql  019_create_referrals.sql  020_create_dismissed_suggestions.sql  validate-env.js
backend/services/: email-parser.ts  email-scanner.ts  gmail-service.ts  outlook-service.ts
backend/src/: index.ts
backend/tests/: csrf.test.ts  email-scanner.test.ts  event-listener-reconnection.test.ts  logger.test.ts  monitoring-service.test.ts  quiet-hours-integration.test.ts  quiet-hours-service.test.ts  referral-service.test.ts  renewal-executor.test.ts  secret-management.test.ts  setup.ts  suggestion-service.test.ts  telegram-bot-service.test.ts
backend/utils/: oauth-state.ts  proof-hashing.ts
client/: .eslintrc.cjs  package-lock.json  package.json  tsconfig.json  vitest.unit.config.ts
client/app/: error.tsx  layout.tsx  not-found.tsx  page.tsx
client/components/: dashboard-client.tsx  deletion-banner.tsx  onboarding-tour-enhanced.tsx  onboarding-tour-joyride.tsx  onboarding-tour-simple.tsx  undo-panel.tsx
client/hooks/: use-notification-actions.ts  (+2 more)
contracts/contracts/virtual-card/: Cargo.toml
sdk/: package.json
supabase/: config.toml  seed.sql
(+91 files in other folders)
