[package]
name = "virtual-card"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = { workspace = true }

[dev-dependencies]
soroban-sdk = { version = "25", features = ["testutils"] }

[profile.release]
opt-level = "z"
strip = true
lto = true
codegen-units = 1
overflow-checks = true

[profile.release-with-logs]
inherits = "release"
debug = true
